<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>
    <groupId>com.ytdd9527.networksexpansion</groupId>
    <artifactId>NetworksExpansion</artifactId>
    <version>2.0.9-Alpha-34</version>

    <distributionManagement>
        <repository>
            <id>central</id>
            <name>sefi-central</name>
            <url>https://sefiraat.jfrog.io/artifactory/default-maven-local</url>
        </repository>
        <snapshotRepository>
            <id>snapshots</id>
            <name>sefi-snapshot</name>
            <url>https://sefiraat.jfrog.io/artifactory/default-maven-local</url>
        </snapshotRepository>
    </distributionManagement>

    <pluginRepositories>
        <pluginRepository>
            <releases>
                <updatePolicy>never</updatePolicy>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
            <id>snapshots</id>
            <name>maven-snapshots</name>
            <url>https://repository.apache.org/content/repositories/snapshots/</url>
        </pluginRepository>
        <pluginRepository>
            <releases>
                <updatePolicy>never</updatePolicy>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
            <id>central</id>
            <name>Maven Plugin Repository</name>
            <url>https://repo1.maven.org/maven2</url>
        </pluginRepository>
    </pluginRepositories>

    <properties>
        <maven.compiler.source>16</maven.compiler.source>
        <maven.compiler.target>16</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <build>
        <finalName>${project.name} v${project.version}</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.6.0</version>
                <configuration>
                    <minimizeJar>true</minimizeJar>
                    <relocations>
                        <relocation>
                            <pattern>org.bstats</pattern>
                            <shadedPattern>io.github.sefiraat.networks.bstats</shadedPattern>
                        </relocation>

                        <relocation>
                            <pattern>io.papermc.lib</pattern>
                            <shadedPattern>dev.sefiraat.cultivation.paperlib</shadedPattern>
                        </relocation>

                    </relocations>
                    <filters>
                        <filter>
                            <artifact>*:*</artifact>
                            <excludes>
                                <exclude>META-INF/*</exclude>
                            </excludes>
                        </filter>
                    </filters>
                </configuration>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
        <defaultGoal>clean package</defaultGoal>
        <sourceDirectory>${basedir}/src/main/java</sourceDirectory>

        <resources>
            <resource>
                <directory>${basedir}/src/main/resources</directory>
                <filtering>true</filtering>
                <includes>
                    <include>**/*.*</include>
                    <include>tags/*.json</include>
                </includes>
            </resource>
        </resources>
    </build>


    <repositories>
        <repository>
            <id>spigot-repo</id>
            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
        </repository>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
        <repository>
            <id>jeffMediaPublic</id>
            <url>https://repo.jeff-media.com/public</url>
        </repository>
        <repository>
            <id>mcmmo-repo</id>
            <url>https://nexus.neetgames.com/repository/maven-public</url>
        </repository>
        <repository>
            <id>bg-repo</id>
            <url>https://repo.bg-software.com/repository/api/</url>
        </repository>
        <repository>
            <id>papermc</id>
            <url>https://papermc.io/repo/repository/maven-public/</url>
        </repository>
        <repository>
            <id>rosewood-repo</id>
            <url>https://repo.rosewooddev.io/repository/public/</url>
        </repository>
    </repositories>

    <dependencies>
        <!-- Core -->
        <dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>spigot-api</artifactId>
            <version>1.21-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.github.SlimefunGuguProject</groupId>
            <artifactId>Slimefun4</artifactId>
            <version>b39097e015</version>
            <scope>provided</scope>
        </dependency>


        <!-- Tools etc. -->
        <dependency>
            <groupId>org.bstats</groupId>
            <artifactId>bstats-bukkit</artifactId>
            <version>3.0.2</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.google.code.findbugs</groupId>
            <artifactId>annotations</artifactId>
            <version>3.0.1u2</version>
            <exclusions>
                <exclusion>
                    <groupId>net.jcip</groupId>
                    <artifactId>jcip-annotations</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>com.google.code.findbugs</groupId>
                    <artifactId>jsr305</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <!-- Useful Annotation -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.34</version>
            <scope>provided</scope>
        </dependency>
        <!-- Useful PDC Types -->
        <dependency>
            <groupId>com.jeff-media</groupId>
            <artifactId>MorePersistentDataTypes</artifactId>
            <version>2.4.0</version>
            <scope>compile</scope>
        </dependency>
        <!-- Pinyin Library -->
        <dependency>
            <groupId>com.github.houbb</groupId>
            <artifactId>pinyin</artifactId>
            <version>0.4.0</version>
            <scope>compile</scope>
        </dependency>

        <!-- Supported Plugins -->
        <!-- Support Infinity Storage -->
        <dependency>
            <groupId>com.github.SlimefunGuguProject</groupId>
            <artifactId>InfinityExpansion</artifactId>
            <version>3c5db3650a</version>
            <scope>provided</scope>
        </dependency>
        <!-- Support Netheopoiesis -->
        <dependency>
            <groupId>com.github.Sefiraat</groupId>
            <artifactId>Netheopoiesis</artifactId>
            <version>8d1af6c570</version>
            <scope>provided</scope>
        </dependency>
        <!-- Support SlimeHUD -->
        <dependency>
            <groupId>com.github.schntgaispock</groupId>
            <artifactId>SlimeHUD</artifactId>
            <version>1.2.7</version>
            <scope>provided</scope>
        </dependency>
        <!-- Support WildChest -->
        <dependency>
            <groupId>com.bgsoftware</groupId>
            <artifactId>WildChestsAPI</artifactId>
            <version>2024.1</version>
            <scope>provided</scope>
        </dependency>
        <!-- Support WildStacker -->
        <dependency>
            <groupId>com.bgsoftware</groupId>
            <artifactId>WildStackerAPI</artifactId>
            <version>2023.2</version>
            <scope>provided</scope>
        </dependency>
        <!-- Support RoseStacker -->
        <dependency>
            <groupId>dev.rosewood</groupId>
            <artifactId>rosestacker</artifactId>
            <version>1.5.23</version>
            <scope>provided</scope>
        </dependency>
        <!-- Support mcMMO -->
        <dependency>
            <groupId>com.gmail.nossr50.mcMMO</groupId>
            <artifactId>mcMMO</artifactId>
            <version>2.2.017</version>
            <scope>provided</scope>
        </dependency>
        <!-- Chinese localization library -->
        <dependency>
            <groupId>net.guizhanss</groupId>
            <artifactId>GuizhanLibPlugin</artifactId>
            <version>1.7.6</version>
            <scope>provided</scope>
        </dependency>
        <!-- Useful Library -->
        <dependency>
            <groupId>dev.sefiraat</groupId>
            <artifactId>SefiLib</artifactId>
            <version>0.2.6</version>
            <scope>compile</scope>
        </dependency>
        <!-- Support FluffyMachines -->
        <dependency>
            <groupId>com.github.SlimefunGuguProject</groupId>
            <artifactId>FluffyMachines</artifactId>
            <version>035fe56381</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/lib/FluffyMachines.jar</systemPath>
        </dependency>
    </dependencies>
</project>